# whatsapp-claude-bridge

./: .env.example  .gitignore  CLAUDE.md  CONTINUOUS_CHAT_HANDOFF.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
app/: package-lock.json  package.json
app/assets/: gen-icon.mjs
app/src/: index.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
scripts/: install-service.ps1  install-service.sh  setup.sh  uninstall-service.ps1  uninstall-service.sh
src/: api.ts  claude.ts  config.ts  conversation-history.ts  conversation-mode.ts  index.ts  jobs.ts  lanes.ts  logger.ts  loop-guard.ts  media.ts  mentions.ts  message-text.ts  outbound.ts  progress.ts  providers.ts  qr.ts  recovery.ts  replies.ts  retransmit.ts  runtime.ts  settings.ts  store.ts  turn-journal.ts  turn-queue.ts  ui.ts
tests/: config.test.ts  conversation-history.test.ts  conversation-mode.test.ts  jobs.test.ts  lanes.test.ts  loop-guard.test.ts  loop-trip.test.ts  mentions.test.ts  message-text.test.ts  progress.test.ts  providers.test.ts  recovery.test.ts  replies.test.ts  turn-journal.test.ts  turn-queue.test.ts
tests/helpers/: test-home.ts
