[package]
name = "whatsapp-bridge-app"
version = "0.1.0"
description = "Tray app that manages the whatsapp-claude-bridge daemon as a sidecar"
authors = ["AI Makers Co"]
license = "MIT"
edition = "2021"

[lib]
name = "whatsapp_bridge_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync"] }
getrandom = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
